# Labs_cpp

./: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3.cpp  lab8.cpp
lab10/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Chess.cpp  Chess.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  lab10.cpp
lab4/: Bow.cpp  Bow.h  Shop.cpp  Shop.h  Spear.cpp  Spear.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  lab4.cpp
lab5/: Animal.cpp  Animal.h  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Rat.cpp  Rat.h  Vombat.cpp  Vombat.h  Zoo.cpp  Zoo.h  lab5.cpp
lab6/: AssaultRifle.cpp  AssaultRifle.h  FunZone.cpp  FunZone.h  Pistol.cpp  Pistol.h  Rifle.cpp  Rifle.h  Shotgun.cpp  Shotgun.h  Weapon.cpp  Weapon.h  lab6.cpp
lab7/: Castle.cpp  Castle.h  Dragon.cpp  Dragon.h  Head.cpp  Head.h  Tower.cpp  Tower.h  lab7.cpp
lab9/: User.cpp  User.h  lab9.cpp
