cmake_minimum_required(VERSION 3.17)
project(lab1c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab1c__ lab1.cpp)
add_executable(lab2c__ lab2.cpp)
add_executable(lab3c__ lab3.cpp)
add_executable(lab4c__ lab4/lab4.cpp )
add_executable(lab5c__ lab5/lab5.cpp )
add_executable(lab6c__ lab6/lab6.cpp )

