cmake_minimum_required(VERSION 3.17)
project(lab1c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab1c__ lab1.cpp)
add_executable(lab2c__ lab2.cpp)
add_executable(lab3c__ lab3.cpp)
add_executable(lab4c__ lab4/lab4.cpp )
add_executable(lab5c__ lab5/lab5.cpp )
add_executable(lab6c__ lab6/lab6.cpp )
add_executable(lab7c__ lab7/lab7.cpp )
add_executable(lab8c__ lab8.cpp)
add_executable(lab9c__ lab9/lab9.cpp )
add_executable(lab10c__ lab10/lab10.cpp lab10/Figure.cpp lab10/King.cpp)

